@@ -3108,27 +3108,31 @@ _EOF_
 
 			Banner_Installing
 
-			#MPD
+			INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/mpd_0.19.21_'
+
 			# - armv6
 			if (( $HW_ARCH == 1 )); then
 
-				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/mpd_0.19.19_armv6.deb'
+				INSTALL_URL_ADDRESS+='armv6.deb'
 
 			# - armv7+
 			elif (( $HW_ARCH >= 2 && $HW_ARCH < 10 )); then
 
-				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/mpd_0.19.19_armv7.deb'
+				INSTALL_URL_ADDRESS+='armv7.deb'
 
 			# - arm64
 			elif (( $HW_ARCH >= 10 && $HW_ARCH < 20 )); then
 
-				INSTALL_URL_ADDRESS='http://dietpi.com/downloads/binaries/all/mpd_0.19.19_arm64.deb'
+				INSTALL_URL_ADDRESS+='arm64.deb'
 
 			fi
 			/DietPi/dietpi/func/check_connection "$INSTALL_URL_ADDRESS"
 
 			#	Install
 			if (( $? == 0 )); then
+
+				#libupnp6 + Avahi-Daemon for net discov with upnp
+				AGI avahi-daemon libupnp6
 
 				# - ARM64 not available in Jessie repos
 				if (( $DISTRO == 3 &&
