@@ -58,6 +58,7 @@
 	#Clear cache
 	apt-get clean
 	rm -R /var/lib/apt/lists/* -vf #lists cache: remove partial folder also, automatically gets regenerated on apt-get update
+	rm /var/lib/dpkg/info/*
 
 	# - Set default apt mirrors
 	/DietPi/dietpi/func/dietpi-set_software apt-mirror default
@@ -95,6 +96,8 @@
 
 	# - Nano histroy file
 	rm ~/.nano_history
+
+	rm /var/cache/debconf/*-old
 
 	#////////////////////////////////////
 	#Disable/Remove Swapfile (saves 100mb in final image)
