@@ -1083,7 +1083,8 @@ _EOF_
 			fi
 
 			# + RPi 3 (apply to all, as pi-bluetooth package is default installed on all RPi's now)
-			if (( $HW_MODEL < 10 )); then
+			#	+ Asus TB
+			if (( $HW_MODEL < 10 || $HW_MODEL == 100 )); then
 
 				systemctl stop hciuart
 				systemctl disable hciuart
@@ -1181,8 +1182,18 @@ _EOF_
 
 			fi
 
+			#	+ Asus TB
+			if (( $HW_MODEL == 100 )); then
+
+				systemctl enable hciuart
+				systemctl start hciuart
+
+			fi
+
 		else
+
 			Unknown_Input_Mode
+
 		fi
 
 		unset aBLUETOOTH_MODULES
