@@ -2390,7 +2390,8 @@ _EOF_
 	elif (( $VERSION_CURRENT == 146 )); then
 		#-------------------------------------------------------------------------------
 		#Shairport sync 3.0.2: https://github.com/Fourdee/DietPi/issues/819
-		/DietPi/dietpi/dietpi-software reinstall 37
+		#MPD 19.21: https://github.com/Fourdee/DietPi/issues/821
+		/DietPi/dietpi/dietpi-software reinstall 37 128
 		#-------------------------------------------------------------------------------
 
 	fi
