@@ -11,6 +11,7 @@ DietPi-Software | Aria2: Download manager with slick web UI interface, now avail
 DietPi-Software | YaCy: Decentralized open source search engine, now available for install: http://dietpi.com/phpbb/viewtopic.php?f=8&t=5&p=6202#p6202
 DietPi-Software | Blynk Server: config file added to the diepi user data folder, thanks to @joaofl: https://github.com/Fourdee/DietPi/pull/810
 DietPi-Software | ShairPort-Sync: Updated to 3.0.2. SOXR interpolation is now enabled by default (will improve sound quality): https://github.com/Fourdee/DietPi/issues/819
+DietPi-Software | MPD: Updated to 19.21. Also includes optional plugin support for UPNP playback: https://github.com/Fourdee/DietPi/issues/821
 
 Bug fixes:
 DietPi-Software | Removed references for dietpi-uninstall. Many thanks to Pilovali!
